Adding clear list feature

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -3,6 +3,7 @@
     <ul class="main-header__item-list">
       <li class="main-header__item"><a class="<%= path === '/' ? 'active' : ''%>" href="/">List</a></li>
       <li class="main-header__item"><a class="<%= path === '/add/add-address' ? 'active' : ''%>" href="/add/add-address">Add Address</a></li>
+      <li class="main-header__item"><a class="<%= path === '/add/add-address' ? 'active' : ''%>" href="/add/clear">Clear List</a></li>
     </ul>
   </nav>
 </header>
